- Atualizados scripts de inserção da associação Professor - Area de interesse

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,9 @@ user_guide_src/cilexer/pycilexer.egg-info/*
 #-------------------------
 /nbproject/
 .idea/*
+/.settings
+.buildpath
+.project
 
 ## Sublime Text cache files
 *.tmlanguage.cache
